RE-119 Tests for ClassDiscoveryHelper